{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 31,
  "lineage": "63e6f7d5-956e-01a6-7493-001d90ec9c4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:533267160552:instance/i-0ef7a0691ca93fca5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef7a0691ca93fca5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b95b7a2b5eacb25a",
            "private_dns": "ip-10-0-1-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.248",
            "public_ip": "3.84.115.48",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0814e9e35f5e52f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffba61df7a81a7a4",
            "tags": {
              "Name": "WebServer-US-East"
            },
            "tags_all": {
              "Name": "WebServer-US-East"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005635de89c594d97"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_us_east",
            "aws_subnet.subnet_us_east",
            "aws_vpc.vpc_us_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d1cd67c26f5fca19",
            "arn": "arn:aws:ec2:us-west-2:533267160552:instance/i-0313f66094f2cf5f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0313f66094f2cf5f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f28048033f55e77d",
            "private_dns": "ip-10-1-1-19.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.19",
            "public_ip": "35.91.130.115",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a427a02b729e838",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a320c4b37cfc921",
            "tags": {
              "Name": "WebServer-US-West"
            },
            "tags_all": {
              "Name": "WebServer-US-West"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083844f97063beb83"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_us_west",
            "aws_subnet.subnet_us_west",
            "aws_vpc.vpc_us_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267160552:internet-gateway/igw-0fabe35a4fb9ee2d9",
            "id": "igw-0fabe35a4fb9ee2d9",
            "owner_id": "533267160552",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-us-east"
            },
            "tags_all": {
              "Name": "igw-us-east"
            },
            "vpc_id": "vpc-0876032f18b7d7fac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_us_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267160552:internet-gateway/igw-0a4d7d6e3e5bb96e1",
            "id": "igw-0a4d7d6e3e5bb96e1",
            "owner_id": "533267160552",
            "region": "us-west-2",
            "tags": {
              "Name": "igw-us-west"
            },
            "tags_all": {
              "Name": "igw-us-west"
            },
            "vpc_id": "vpc-01994e9874896df9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_us_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267160552:route-table/rtb-06932608f5bdb93a3",
            "id": "rtb-06932608f5bdb93a3",
            "owner_id": "533267160552",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fabe35a4fb9ee2d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-us-east"
            },
            "tags_all": {
              "Name": "rt-us-east"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876032f18b7d7fac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_us_east",
            "aws_vpc.vpc_us_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267160552:route-table/rtb-00d0ae44136748d33",
            "id": "rtb-00d0ae44136748d33",
            "owner_id": "533267160552",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4d7d6e3e5bb96e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-us-west"
            },
            "tags_all": {
              "Name": "rt-us-west"
            },
            "timeouts": null,
            "vpc_id": "vpc-01994e9874896df9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_us_west",
            "aws_vpc.vpc_us_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaf77195c1ab20d9",
            "region": "us-east-1",
            "route_table_id": "rtb-06932608f5bdb93a3",
            "subnet_id": "subnet-0ffba61df7a81a7a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_us_east",
            "aws_route_table.rt_us_east",
            "aws_subnet.subnet_us_east",
            "aws_vpc.vpc_us_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f64309cf141358bd",
            "region": "us-west-2",
            "route_table_id": "rtb-00d0ae44136748d33",
            "subnet_id": "subnet-06a320c4b37cfc921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_us_west",
            "aws_route_table.rt_us_west",
            "aws_subnet.subnet_us_west",
            "aws_vpc.vpc_us_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267160552:security-group/sg-005635de89c594d97",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005635de89c594d97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-us-east",
            "name_prefix": "",
            "owner_id": "533267160552",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-us-east"
            },
            "tags_all": {
              "Name": "web-sg-us-east"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876032f18b7d7fac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_us_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267160552:security-group/sg-083844f97063beb83",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083844f97063beb83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-us-west",
            "name_prefix": "",
            "owner_id": "533267160552",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-us-west"
            },
            "tags_all": {
              "Name": "web-sg-us-west"
            },
            "timeouts": null,
            "vpc_id": "vpc-01994e9874896df9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_us_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267160552:subnet/subnet-0ffba61df7a81a7a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffba61df7a81a7a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267160552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-us-east"
            },
            "tags_all": {
              "Name": "subnet-us-east"
            },
            "vpc_id": "vpc-0876032f18b7d7fac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_us_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267160552:subnet/subnet-06a320c4b37cfc921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a320c4b37cfc921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267160552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "subnet-us-west"
            },
            "tags_all": {
              "Name": "subnet-us-west"
            },
            "vpc_id": "vpc-01994e9874896df9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_us_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267160552:vpc/vpc-0876032f18b7d7fac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f753fc75bec2b3f4",
            "default_route_table_id": "rtb-0629c437cf51dccb7",
            "default_security_group_id": "sg-08c25663fd44a7e00",
            "dhcp_options_id": "dopt-0faf48837976639d8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0876032f18b7d7fac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0629c437cf51dccb7",
            "owner_id": "533267160552",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-us-east"
            },
            "tags_all": {
              "Name": "vpc-us-east"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267160552:vpc/vpc-01994e9874896df9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b989a4a336e0a717",
            "default_route_table_id": "rtb-0e2d955be70b81bcf",
            "default_security_group_id": "sg-07835ca595f41d089",
            "dhcp_options_id": "dopt-0c81e28f684ea8089",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01994e9874896df9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2d955be70b81bcf",
            "owner_id": "533267160552",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-us-west"
            },
            "tags_all": {
              "Name": "vpc-us-west"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}